public/stylesheets/style.css
body {
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}
.nav-styles{
    color: #DCDCDC !important;
}
a:hover {
  color: black;

}
.navbar-inverse{
  background-color: rgba(0,0,0,0.4);
  background-image:none;
  border-bottom: 0px;
}
.parallax-window {
    min-height: 550px;
    background: transparent;
}

.parallax-window-second{
    min-height: 400px;
    height: 100%;
    background: transparent;
}
.parallax-window-third{
    min-height: 500px;
    background: transparent;
}
@media only screen and (max-width: 992px) {
    .parallax-window-second{
        min-height: 800px;
    }
}
@media only screen and (max-width: 992px) {
    .parallax-window-third{
        min-height: 1000px;
    }
}

.layer {

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 550px;
}

.blur-box{
  padding: 20px;
  height: 225px;
  position: relative;
  margin-top: 410px;
  background: rgb(34,34,34); /* for IE */
  background: rgba(34,34,34,0.75);
  border-radius: 10px;
  border: 2px solid white;
}
.blur-box-contact{
  height: 355px;
  position: relative;
  margin-top: -100px;
  background: rgb(34,34,34); /* for IE */
  background: rgba(0,0,69,0.9);
  border-radius: 5px;
}
.img-circle{
    margin: auto;
    left: 0;
    right: 0;
    position: absolute;
    height: 160px;
    width: 160px;
}

.push-image-up{
    top: -8em;
}

.iconize{
  width: 120px;
  height: 120px;
  top: 0;
  margin: 2em;
  position: inherit;
  bottom: 0;
  left: 3em;
  right: 0;
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

.iconize-margin{
    margin-top: 14em;
}

.typed-cursor{
    opacity: 1;
    -webkit-animation: blink 0.7s infinite;
    -moz-animation: blink 0.7s infinite;
    animation: blink 0.7s infinite;
}
@keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-webkit-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
@-moz-keyframes blink{
    0% { opacity:1; }
    50% { opacity:0; }
    100% { opacity:1; }
}
.style{
  text-align: center;
  overflow: hidden;
  margin-top: 2em;
  font-size: 3em;
  font-weight: 400;
  color: lightgrey;
  position: relative;
}

.jumbotron {
    margin-bottom: 0px;
    min-height: 400px;
    background-position: 0% 25%;
    background-size: cover;
    background-repeat: no-repeat;
    background-color: #2c2a2a;
}
.jumbotron-style{
  text-shadow: black 0em 0em 0em;
  text-align: center;
  padding-top: 6em;
  font-size: 25px;
  color: white
}
.parallax-style{
  background-color: rgba(200, 150, 300, 0.3);
  width: 100%;
  height: 400px;
}


.right-side{
  border-left: 1px solid black;
  padding-left: 40px;
  margin-left: -15px;
}

.left-side{
  padding-right: 40px;
  border-right: 1px solid black;
  margin-right: -16px;
}
.addpad{
  padding-top: 30px;
}

.floating-dot-left{
  height: 1em;
  width: 1em;
  border-radius: 2em;
  border: none;
  background-color: black;
  float: left;
  margin-left: -47px;
}

.floating-dot-right{
  height: 1em;
  width: 1em;
  border-radius: 2em;
  border: none;
  background-color: black;
  float: right;
  margin-right: -47px;
}

.contact-section{

}

.text-right{
  text-align: right;
}
.footer{
  height: 50px;
  background-color: lightgrey;
  width: 100%;

}
.portfolio{
  height: 800px;
}
.leftycontact{
  background-color: black;
  height: 400px;
}
.rightycontact{
  background-color: white;
  height: 400px;
}
.paddingremove{
  padding-left: 0px;
  padding-right: 0px;
}

.underline{
  width: 65px;
  height: 5px;
  background-color: black;
}

.input-style{
  background-color: tranperant;
  border-bottom: 5px;
  width: 200px;
  height: 35px;
  margin-top: 30px;
  outline: none;
  outline-style: none;
}
.input-style-subject{
  background-color: tranperant;
  border-bottom: 5px;
  width: 465px;
  height: 35px;
  margin-top: 30px;
  outline: none;
  outline-style: none;
}
input[type=text] {
    background: transparent;
    border: none;
    border-bottom: 2px solid black;
    font-size: 17px;
}
.contact-me{
  margin-left: 13px;
}
.messagestyle{
  margin-top: 65px;

}
.textmsg-style{
  font-size: 17px;
  color: #a7a4a4;
  margin-top: 30px;
}
input[type=textarea]{
  background: transparent;
  border: none;
  border-bottom: 2px solid black;
  font-size: 17px;
  margin-top: 65px;
}
.send-button{
  margin-top: 35px;
  position: relative;
  margin-left: 169px;
  width: 100px;
  height: 29px;
  border-radius: 5px;
  background-color: transparent;
  border: 2px solid black;
  color: black;
}
.quickid{
  color: white;
  margin-left: 165px;
}
.underline-black{
  width: 55px;
  height: 5px;
  background-color: white;
  margin-left: 152px;
}

